去除订单备注的文本框

--- a/application/admin/view/order/details.html
+++ b/application/admin/view/order/details.html
@@ -475,12 +475,12 @@
                 </div>
             </div>
             <!-- 备注 -->
-            <div class="layui-form-item">
+            <!-- <div class="layui-form-item">
                 <label class="layui-form-label">备注</label>
                 <div class="layui-input-4">
                     <textarea name="remark" placeholder="请输入备注信息" class="layui-textarea">{:htmlentities($orderInfo.remark)}</textarea>
                 </div>
-            </div>
+            </div> -->
             <!-- 客户微信回执图 -->
             {if condition="!empty($orderInfo.wechat_receipt_image)"}
             <div class="layui-form-item">
