--- a/application/admin/view/order/edit.html
+++ b/application/admin/view/order/edit.html
@@ -746,12 +746,12 @@
                 </div>
             </div>
             <!-- 备注 -->
-            <div class="layui-form-item">
+            <!-- <div class="layui-form-item">
                 <label class="layui-form-label">备注</label>
                 <div class="layui-input-4">
                     <textarea name="remark" id="remark" placeholder="请输入备注信息" class="layui-textarea"></textarea>
                 </div>
-            </div>
+            </div> -->
             <!-- 提交按钮 -->
             <div class="layui-form-item">
                 <div class="layui-input-block">
