--- a/application/admin/view/order/add.html
+++ b/application/admin/view/order/add.html
@@ -361,7 +361,7 @@
                                     window.collaboratorSelectInstance = xmSelect.render({
                                         el: '#collaboratorSelect',
                                         name: 'joint_person',
-                                        layVerify: 'required',
+                                        //layVerify: 'required',
                                         tips: '请选择协同人员',
                                         filterable: true,
                                         clickClose: false,
