--- a/application/admin/view/order/details.html
+++ b/application/admin/view/order/details.html
@@ -218,7 +218,7 @@
             </div>
             <!-- 协同人 -->
             <div class="layui-form-item">
-                <label class="layui-form-label">协同人<span style="color:red;">*</span></label>
+                <label class="layui-form-label">协同人</label>
                 <div class="layui-input-4">
                     <div id="collaboratorSelect"></div>
                 </div>
